fixing title display on mobile

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -61,13 +61,32 @@
   max-width:100%;
   min-height: 53vh;
   margin: 0 auto;
-  padding: 4em;
+  padding: 0;
 }
 
 
 .hero .title h1 {
-  font-size:4rem;
+  font-size:3rem;
 }
+
+.hero .title h4 {
+  font-size:2rem;
+}
+
+@media (min-width: 600px) {
+  .hero .title {
+    padding:4rem;
+  }
+
+  .hero .title h1 {
+    font-size:4rem;
+  }
+
+  .hero .title h4 {
+    font-size: 2.7rem
+  }
+}
+
 
 .hero .blurb {
   max-width: 1200px;
